--- a/gb/19/11/4/n11631630.md
+++ b/gb/19/11/4/n11631630.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/qblozw235/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/qblozw235/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/qblozw235/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/qblozw235/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/qblozw235/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/qblozw235/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/qblozw235/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/qblozw235/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/qblozw235/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/qblozw235/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/qblozw235/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/qblozw235/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/qblozw235/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/qblozw235/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/qblozw235/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/qblozw235/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/qblozw235/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/qblozw235/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/qblozw235/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/qblozw235/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/qblozw235/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/qblozw235/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/qblozw235/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/qblozw235/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/qblozw235/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/qblozw235/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/qblozw235/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/qblozw235/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/qblozw235/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/qblozw235/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/qblozw235/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/qblozw235/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/qblozw235/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/qblozw235/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/qblozw235/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/qblozw235/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/qblozw235/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/qblozw235/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/qblozw235/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/qblozw235/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/qblozw235/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/qblozw235/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/qblozw235/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/qblozw235/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/qblozw235/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>西澳旅游公路放置多语种标志 期减游客车祸</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2019年11月04日讯】（大纪元记者陈光<ahref="https://github.com/qblozw235/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2.md#1">澳洲</a>悉尼编译报导）为了帮助驾车的<ahref="https://github.com/qblozw235/djy/blob/master/gb/tag/%E5%9B%BD%E9%99%85%E6%B8%B8%E5%AE%A2.md#1">国际游客</a>在澳洲的<ahref="https://github.com/qblozw235/djy/blob/master/gb/tag/%E5%85%AC%E8%B7%AF.md#1">公路</a>上<ahref="https://github.com/qblozw235/djy/blob/master/gb/tag/%E5%AE%89%E5%85%A8%E8%A1%8C%E9%A9%B6.md#1">安全行驶</a>，西澳政府已开始在主要的旅游路线的公路上和危险的公路盲点上推出了包括中文在内的多语种公路标志牌。</p>
+<p>【大纪元2019年11月04日讯】（大纪元记者陈光<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2.md#1">澳洲</a>悉尼编译报导）为了帮助驾车的<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%9B%BD%E9%99%85%E6%B8%B8%E5%AE%A2.md#1">国际游客</a>在澳洲的<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%85%AC%E8%B7%AF.md#1">公路</a>上<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%AE%89%E5%85%A8%E8%A1%8C%E9%A9%B6.md#1">安全行驶</a>，西澳政府已开始在主要的旅游路线的公路上和危险的公路盲点上推出了包括中文在内的多语种公路标志牌。</p>
 <p>这些多语种的标志牌有着“靠左行驶”的图示和箭头，以及除英文外，用德文、法文和简体中文写明的“靠左行驶”字样。</p>
 <p>据九号新闻网报导，西澳交通厅长萨菲奥蒂（Rita Saffioti）说，这样做是为了尽一切可能地确保驾车者的安全。</p>
-<p>她说，由于车辆行驶所处的路侧不同，“我们<ahref="https://github.com/qblozw235/djy/blob/master/gb/tag/%E5%85%AC%E8%B7%AF.md#1">公路</a>上许多死于事故的人都来自于欧洲国家。”</p>
+<p>她说，由于车辆行驶所处的路侧不同，“我们<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%85%AC%E8%B7%AF.md#1">公路</a>上许多死于事故的人都来自于欧洲国家。”</p>
 <p>目前，在西澳中西部地区车祸频发的印度洋大道（Indian Ocean Drive）上，政府将放置42个标志牌和70个箭头牌。此举将花费纳税人13.5万澳元。</p>
 <p>在过去5年中，这条270公里长的公路上共有54人在车祸中死亡或严重受伤。</p>
 <p>之后，多语种交通标示牌的使用还将扩展到旅游热点，包括北汉普敦-卡尔巴里（Northhampton-Kalbarri）公路、米利亚-埃克斯毛思（Miliya-Exmouth）公路和伯凯特（Burkett）公路。</p>
@@ -22,42 +22,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/qblozw235/djy/blob/master/gb/17/9/15/n9634953.md#1">新州将于11月实行驾照颁发新规</a></li>
-<li><a href="https://github.com/qblozw235/djy/blob/master/gb/19/1/18/n10984327.md#1">热浪破高温纪录 烈日烤化新州东北高速公路</a></li>
-<li><a href="https://github.com/qblozw235/djy/blob/master/gb/19/9/16/n11524704.md#1">躲避鹊鸟俯冲摔下自行车 悉尼老翁重伤身亡</a></li>
-<li><a href="https://github.com/qblozw235/djy/blob/master/gb/19/9/20/n11534084.md#1">只顾手机不看路 新州今年38名行人被车撞死</a></li>
-<li><a href="https://github.com/qblozw235/djy/blob/master/gb/19/9/26/n11547930.md#1">国际专家：解决悉尼交通需当健康问题处理</a></li>
-<li><a href="https://github.com/qblozw235/djy/blob/master/gb/19/9/26/n11548020.md#1">撞伤前摩托帮老大 澳洲华裔名医之女被控</a></li>
-<li><a href="https://github.com/qblozw235/djy/blob/master/gb/19/9/26/n11548026.md#1">驱车撞入居民卧室  澳国际留学生认罪致歉</a></li>
-<li><a href="https://github.com/qblozw235/djy/blob/master/gb/19/10/4/n11567018.md#1">墨尔本发生车祸 5名中国人受伤</a></li>
-<li><a href="https://github.com/qblozw235/djy/blob/master/gb/19/10/23/n11606390.md#1">北悉尼M1高速路严重车祸 修路工人受重伤</a></li>
-<li><a href="https://github.com/qblozw235/djy/blob/master/gb/20/4/13/n12026051.md#1">疫情促澳洲自给自足 国内制造业或受益</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/9/15/n9634953.md#1">新州将于11月实行驾照颁发新规</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/18/n10984327.md#1">热浪破高温纪录 烈日烤化新州东北高速公路</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/9/16/n11524704.md#1">躲避鹊鸟俯冲摔下自行车 悉尼老翁重伤身亡</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/9/20/n11534084.md#1">只顾手机不看路 新州今年38名行人被车撞死</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/9/26/n11547930.md#1">国际专家：解决悉尼交通需当健康问题处理</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/9/26/n11548020.md#1">撞伤前摩托帮老大 澳洲华裔名医之女被控</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/9/26/n11548026.md#1">驱车撞入居民卧室  澳国际留学生认罪致歉</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/10/4/n11567018.md#1">墨尔本发生车祸 5名中国人受伤</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/10/23/n11606390.md#1">北悉尼M1高速路严重车祸 修路工人受重伤</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616236.md#1">首都政府拨款 协助俱乐部摆脱赌博经营模式</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/20/n10498992.md#1" target="_blank">裴毅然：再说“四?一二”</a></li><li><a href="https://github.com/qblozw235/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/24/n10509014.md#1" target="_blank">驱除共产 回归传统 华府万人传递希望</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/4/n11234388.md#1" target="_blank">【征文】文宇：科举千年兴衰录（三）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/6/17/n3896170.md#1" target="_blank">与同事的对话：法轮功没有政治诉求</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/qblozw235/djy/blob/master/gb/20/4/10/n12021047.md#1">【独家】黑龙江文件揭绥芬河疫情爆发真相</a></li>
-<li><a href="https://github.com/qblozw235/djy/blob/master/gb/20/4/11/n12023271.md#1">否认台湾曾警示病毒人传人 谭德塞遭艺人呛爆</a></li>
-<li><a href="https://github.com/qblozw235/djy/blob/master/gb/20/4/12/n12024410.md#1">中共肺炎在台湾“零复阳” 张上淳推估一原因</a></li>
-<li><a href="https://github.com/qblozw235/djy/blob/master/gb/20/4/11/n12023116.md#1">国际追责中共 党媒罕见预警被指倒打一耙</a></li>
-<li><a href="https://github.com/qblozw235/djy/blob/master/gb/20/4/11/n12022317.md#1">台男居家隔离结束约1周后确诊 期间曾购物上班</a></li>
-<li><a href="https://github.com/qblozw235/djy/blob/master/gb/20/4/10/n12020211.md#1">谭德塞批遭台湾人歧视 在台非裔艺人吐公道话</a></li>
-<li><a href="https://github.com/qblozw235/djy/blob/master/gb/20/4/12/n12023872.md#1">澳洲小狗故意贴地走路 嘲弄腿短的同伴</a></li>
-<li><a href="https://github.com/qblozw235/djy/blob/master/gb/20/4/10/n12019586.md#1">女儿完成居家检疫 李翊君：放下心中大石</a></li>
-<li><a href="https://github.com/qblozw235/djy/blob/master/gb/20/4/10/n12020465.md#1">大陆公司高管涉性侵养女 章子怡谴责官商勾结</a></li>
-<li><a href="https://github.com/qblozw235/djy/blob/master/gb/20/4/10/n12020808.md#1">港女星滞留武汉76天 解封后带狗狗直奔医院</a></li>
-<li><a href="https://github.com/qblozw235/djy/blob/master/gb/20/4/11/n12023098.md#1">曾于地府做冥判 清末民初奇人讲述幽冥见闻</a></li>
-<li><a href="https://github.com/qblozw235/djy/blob/master/gb/20/4/1/n11993780.md#1">【命理】古今实例 不好的命是怎样形成的？</a></li>
-<li><a href="https://github.com/qblozw235/djy/blob/master/gb/20/4/12/n12023749.md#1">民调：近半美国人认为 这波疫情是神的警示</a></li>
-<li><a href="https://github.com/qblozw235/djy/blob/master/gb/20/4/6/n12007048.md#1">未来的人们都将在善恶间抉择——1950年宋美龄《在纽约向全美广播演说》</a></li>
-<li><a href="https://github.com/qblozw235/djy/blob/master/gb/20/3/25/n11973707.md#1">《天口》道人生 张三丰说五德五脏五行的关系</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615078.md#1">刘凯文：香港抗疫政策混乱 遗体滞留急症室</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614595.md#1">【直播】俄乌大战 拜登首次国情咨文演说</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/qblozw235/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/qblozw235/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/11/4/n11631630.htm">西澳旅游公路放置多语种标志 期减游客车祸</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/11/4/n11631630.htm">西澳旅游公路放置多语种标志 期减游客车祸</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/qblozw235/djy/blob/master/gb/19/11/4/n11631630.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/qblozw235/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblozw235/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/qblozw235/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/qblozw235/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/qblozw235/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblozw235/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/qblozw235/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblozw235/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/qblozw235/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblozw235/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/qblozw235/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblozw235/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/qblozw235/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblozw235/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/qblozw235/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblozw235/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/qblozw235/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblozw235/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/qblozw235/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblozw235/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/qblozw235/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblozw235/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/qblozw235/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblozw235/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/qblozw235/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblozw235/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/qblozw235/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblozw235/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/qblozw235/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblozw235/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/qblozw235/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblozw235/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/qblozw235/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblozw235/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/qblozw235/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblozw235/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/qblozw235/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblozw235/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/qblozw235/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblozw235/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/qblozw235/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblozw235/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/qblozw235/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblozw235/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/qblozw235/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblozw235/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/qblozw235/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblozw235/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/19/11/4/n11631630.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
